--- a/index.html
+++ b/index.html
@@ -171,11 +171,12 @@
                 Analyse
             </h2>
             <p class="titre">
-                Ci-dessous, nous avons une analyse du projet à travers le diagramme de classe,
-                les diagrammes de cas d'utilisation, de sequences et d'activité.
+                Ci-dessous, nous avons une analyse du projet à travers
+                les diagrammes de cas d'utilisation et de sequences fait à partir du language UML.
             </p>
         </div>
         <div class="gallery">
+
             <div class="img">
                 <img src="images/uc_diagramme.jpg" alt="">
                 <p>
@@ -183,66 +184,52 @@
                     <br>
                     <span>Cas d'utilisation</span>
                 </p>
+                <!-- <span class="diagramme__titre">rechercher une recette</span> -->
             </div>
+
             <div class="img">
-                <img src="images/shuffle-02.jpg" alt="">
+                <img src="images/uc_ajout_favori.jpg" alt="">
                 <p>
-                    awesome image
+                    d'ajouter aux favoris
                     <br>
-                    <span>photography</span>
+                    <span>Diagramme de sequences</span>
                 </p>
+                <!-- <span class="diagramme__titre">rechercher une recette</span> -->
             </div>
+
             <div class="img">
-                <img src="images/shuffle-03.jpg" alt="">
+                <img src="images/uc_consulter_recette.jpg" alt="">
                 <p>
-                    awesome image
+                    consulter une recette
                     <br>
-                    <span>photography</span>
+                    <span>Diagramme de sequences</span>
                 </p>
+                <!-- <span class="diagramme__titre">rechercher une recette</span> -->
             </div>
+
             <div class="img">
-                <img src="images/shuffle-04.jpg" alt="">
+                <img src="images/uc_noter_recette.jpg" alt="">
                 <p>
-                    awesome image
+                    noter d'une recette
                     <br>
-                    <span>photography</span>
+                    <span>Diagramme de sequences</span>
                 </p>
+                <!-- <span class="diagramme__titre">rechercher une recette</span> -->
             </div>
+            
             <div class="img">
-                <img src="images/shuffle-05.jpg" alt="">
+                <img src="images/uc_rechercher_recette.jpg" alt="">
                 <p>
-                    awesome image
+                    rechercher une recette
                     <br>
-                    <span>photography</span>
+                    <span>Diagramme de sequences</span>
                 </p>
+                
             </div>
-            <div class="img">
-                <img src="images/shuffle-06.jpg" alt="">
-                <p>
-                    awesome image
-                    <br>
-                    <span>photography</span>
-                </p>
-            </div>
-            <div class="img">
-                <img src="images/shuffle-07.jpg" alt="">
-                <p>
-                    awesome image
-                    <br>
-                    <span>photography</span>
-                </p>
-            </div>
-            <div class="img">
-                <img src="images/shuffle-08.jpg" alt="">
-                <p>
-                    awesome image
-                    <br>
-                    <span>photography</span>
-                </p>
-            </div>
+            <!-- <span class="diagramme__titre">rechercher une recette</span> -->
         </div>
-        <a href="#">more</a>
     </div>
+
     <div class="video overlay">
         <video src="images/awesome-video.mp4" muted loop autoplay></video>
         <div class="text">
