--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         </h3>
                         <p>
                             Nous vous détaillons de fond en comble l'analyse de notre projet dans la 
-                            <a class="notion" href="https://www.notion.so/CAHIER-DE-CHARGE-348e43d48bb54bacb21a6a02cafefdce" target="_blank" rel="noopener noreferrer">documentation Notion</a> 
+                            <a class="notion" href="www.notion.so/recettes-africaines" target="_blank" rel="noopener noreferrer">documentation Notion</a> 
                             crée pour ce but.
                         </p>
                     </div>
@@ -200,7 +200,7 @@
         <div class="gallery">
 
             <div class="img">
-                <img src="images/conception/signup.jpg" alt="">
+                <img src="images/conception/img1.jpg" alt="">
                 <p>
                     Interface d'inscription
                     <br>
